font fix for main title on mobile

--- a/src/sass/page-template-styles-202503.scss
+++ b/src/sass/page-template-styles-202503.scss
@@ -195,6 +195,14 @@
     }
   }
 
+  h1 {
+    font-size: var(--h2_font-size);
+
+    @media screen and (min-width: 769px) {
+      font-size: var(--h1_font-size);
+    }
+  }
+
   h1 strong {
     --h1_font-weight: 700;
   }
